--- a/app/src/main/res/drawable/ic_envelope_dot.xml
+++ b/app/src/main/res/drawable/ic_envelope_dot.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -17,7 +16,16 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/dark_purple">
-    <item android:drawable="@color/white" />
-</ripple>
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="17"
+    android:viewportHeight="16">
+  <path
+      android:pathData="M17,4C17,5.1046 16.1046,6 15,6C13.8954,6 13,5.1046 13,4C13,2.8954 13.8954,2 15,2C16.1046,2 17,2.8954 17,4Z"
+      android:fillColor="@color/icon_norm"/>
+  <path
+      android:pathData="M1,4H12C12,4.3506 12.0602,4.6872 12.1707,5H2.85L8,9.41L12.4574,5.593C12.6364,5.8781 12.862,6.1309 13.1235,6.3408L8,10.73L2,5.59V12.5L5.2,10.1L5.8,10.9L3,13H13L10.2,10.9L10.8,10.1L14,12.5V6.8293C14.3128,6.9398 14.6494,7 15,7V14H1V4Z"
+      android:fillColor="@color/icon_norm"/>
+</vector>
