--- a/app/src/main/res/drawable/ripple_message_details_actions.xml
+++ b/app/src/main/res/drawable/ripple_message_details_actions.xml
@@ -17,7 +17,10 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
-<resources>
-    <integer name="fab_label_start">0</integer>
-    <integer name="fab_label_end">1</integer>
-</resources>
+
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/interaction_strong_pressed">
+
+    <item android:drawable="@drawable/circle_background_interaction_strong" />
+
+</ripple>
