Added title and subtitle parameters to MessageDetailsActionSheet.
MAILAND-1401

--- a/app/src/main/res/layout/fragment_message_details_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_message_details_action_sheet.xml
@@ -88,7 +88,7 @@
             style="@style/ActionSheetSectionTitleItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/personalise" />
+            android:text="@string/personalize" />
 
         <TextView
             android:id="@+id/detailsActionsLabelAsTextView"
@@ -112,7 +112,7 @@
             style="@style/ActionSheetSectionTitleItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/personalise" />
+            android:text="@string/others" />
 
         <TextView
             android:id="@+id/detailsActionsReportPhishingTextView"
