--- a/app/src/main/res/layout/activity_attachment_storage.xml
+++ b/app/src/main/res/layout/activity_attachment_storage.xml
@@ -136,7 +136,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 android:paddingLeft="@dimen/fields_default_space"
                 android:paddingRight="@dimen/fields_default_space"
                 android:paddingStart="@dimen/fields_default_space"
-                android:text="@string/empty_cache"
+                android:text="@string/empty_data"
                 android:textAllCaps="true"
                 android:maxLines="1"
                 app:fontName="Roboto-Regular.ttf" />
