--- a/app/src/main/res/layout/settings_item.xml
+++ b/app/src/main/res/layout/settings_item.xml
@@ -18,7 +18,9 @@ You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 <ch.protonmail.android.views.SettingsDefaultItemView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/SettingsItemPadding"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="50dp" />
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"/>
