--- a/app/src/main/res/layout/settings_item_layout.xml
+++ b/app/src/main/res/layout/settings_item_layout.xml
@@ -19,7 +19,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/settingsItemWrapper"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -39,21 +38,20 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ch.protonmail.android.views.CustomFontTextView
+        <TextView
             android:id="@+id/headingText"
-            style="@style/SettingsHeadingText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:duplicateParentState="true" />
+            android:textAppearance="@style/Proton.Text.Default" />
 
-        <ch.protonmail.android.views.CustomFontTextView
+        <TextView
             android:id="@+id/valueText"
-            style="@style/SettingsText"
+            style="@style/Proton.Text.DefaultSmall.Weak"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:duplicateParentState="true"
             android:orientation="vertical"
-            app:fontName="Roboto-Light.ttf" />
+            android:visibility="gone" />
 
         <Spinner
             android:id="@+id/timeoutSpinner"
@@ -83,7 +81,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <LinearLayout
         android:id="@+id/buttonsContainer"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:duplicateParentState="true"
         android:gravity="end|center_vertical"
@@ -96,45 +94,24 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/actionSwitch"
+            style="@style/ProtonSwitch.Mail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
             android:duplicateParentState="true"
-            android:theme="@style/SwitchSettings"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
-        <ch.protonmail.android.views.CustomFontButton
+        <Button
             android:id="@+id/clearCacheButton"
-            style="@style/SettingsButtonBlue"
+            style="@style/ProtonButton"
             android:layout_width="wrap_content"
-            android:layout_height="44dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="2dp"
             android:duplicateParentState="true"
             android:maxLines="1"
-            android:paddingStart="@dimen/fields_default_space"
-            android:paddingLeft="@dimen/fields_default_space"
-            android:paddingEnd="@dimen/fields_default_space"
-            android:paddingRight="@dimen/fields_default_space"
-            android:text="@string/empty_cache"
-            android:textAllCaps="true"
-            android:visibility="gone"
-            app:fontName="Roboto-Regular.ttf" />
+            android:text="@string/empty_data"
+            android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/openArrow"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="end"
-            android:background="@android:color/transparent"
-            android:duplicateParentState="true"
-            android:src="@drawable/ic_keyboard_arrow_right_white"
-            android:tint="@color/iron_gray"
-            android:visibility="gone"
-            tools:ignore="ContentDescription" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
