--- a/app/src/main/res/layout/activity_contact_details_body.xml
+++ b/app/src/main/res/layout/activity_contact_details_body.xml
@@ -177,17 +177,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bottom_panel_verification_error" />
 
-    <!-- Bottom encrypted update -->
-    <ViewStub
-        android:id="@+id/upgradeEncryptedStub"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inflatedId="@+id/upgradeEncryptedStub"
-        android:layout="@layout/layout_upgrade_encrypted"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/encryptedDataContainer" />
-
     <!-- Bottom encrypted error -->
     <ViewStub
         android:id="@+id/errorEncryptedStub"
@@ -197,14 +186,14 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout="@layout/layout_error_encrypted"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/upgradeEncryptedStub" />
+        app:layout_constraintTop_toBottomOf="@id/encryptedDataContainer" />
 
     <!-- Bottom group -->
     <androidx.constraintlayout.widget.Group
         android:id="@+id/cardViewBottomPart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="bottom_panel_verification_error,errorEncryptedStub,upgradeEncryptedStub,encryptedDataContainer,encryptedContactTitle" />
+        app:constraint_referenced_ids="bottom_panel_verification_error,errorEncryptedStub,encryptedDataContainer,encryptedContactTitle" />
 
     <!-- Bottom encrypted empty -->
     <ViewStub
