Added view binding to MessageDetailsActionSheet and some basic actions handling.
MAILAND-1401

--- a/app/src/main/res/layout/fragment_message_details_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_message_details_action_sheet.xml
@@ -19,7 +19,6 @@
 
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -30,9 +29,13 @@
         android:paddingTop="@dimen/space_m"
         android:paddingBottom="@dimen/space_l">
 
-        <include layout="@layout/layout_message_details_actions_sheet_header" />
+        <include
+            android:id="@+id/includeLayoutActionSheetHeader"
+            layout="@layout/layout_message_details_actions_sheet_header" />
 
-        <include layout="@layout/layout_message_details_actions_sheet_buttons" />
+        <include
+            android:id="@+id/includeLayoutActionSheetButtons"
+            layout="@layout/layout_message_details_actions_sheet_buttons" />
 
         <TextView
             android:id="@+id/detailsActionsStarUnstarTextView"
