Show the bottom action view when in selection mode in v4
When we enter selection mode, the bottom action view should be shown and the logic behind the actions should be the same as before.

MAILAND-1501

--- a/app/src/main/res/layout/activity_message_details.xml
+++ b/app/src/main/res/layout/activity_message_details.xml
@@ -125,7 +125,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
-        <ch.protonmail.android.views.messageDetails.MessageDetailsActionsView
+        <ch.protonmail.android.views.messageDetails.BottomActionsView
             android:id="@+id/messageDetailsActionsView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
