--- a/app/src/main/res/layout/layout_bottom_actions.xml
+++ b/app/src/main/res/layout/layout_bottom_actions.xml
@@ -26,11 +26,11 @@
     android:background="@color/interaction_strong">
 
     <ImageButton
-        android:id="@+id/replyActionImageView"
+        android:id="@+id/firstActionImageButton"
         android:layout_width="@dimen/message_details_actions_button_size"
         android:layout_height="@dimen/message_details_actions_button_size"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/markUnreadActionImageView"
+        app:layout_constraintRight_toLeftOf="@id/secondActionImageButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/ripple_message_details_actions"
@@ -38,11 +38,11 @@
         app:tint="@color/icon_inverted" />
 
     <ImageButton
-        android:id="@+id/markUnreadActionImageView"
+        android:id="@+id/secondActionImageButton"
         android:layout_width="@dimen/message_details_actions_button_size"
         android:layout_height="@dimen/message_details_actions_button_size"
-        app:layout_constraintLeft_toRightOf="@id/replyActionImageView"
-        app:layout_constraintRight_toLeftOf="@id/trashActionImageView"
+        app:layout_constraintLeft_toRightOf="@id/firstActionImageButton"
+        app:layout_constraintRight_toLeftOf="@id/thirdActionImageButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/ripple_message_details_actions"
@@ -50,11 +50,11 @@
         app:tint="@color/icon_inverted" />
 
     <ImageButton
-        android:id="@+id/trashActionImageView"
+        android:id="@+id/thirdActionImageButton"
         android:layout_width="@dimen/message_details_actions_button_size"
         android:layout_height="@dimen/message_details_actions_button_size"
-        app:layout_constraintLeft_toRightOf="@id/markUnreadActionImageView"
-        app:layout_constraintRight_toLeftOf="@id/moreActionImageView"
+        app:layout_constraintLeft_toRightOf="@id/secondActionImageButton"
+        app:layout_constraintRight_toLeftOf="@id/fourthActionImageButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/ripple_message_details_actions"
@@ -62,10 +62,22 @@
         app:tint="@color/icon_inverted" />
 
     <ImageButton
-        android:id="@+id/moreActionImageView"
+        android:id="@+id/fourthActionImageButton"
         android:layout_width="@dimen/message_details_actions_button_size"
         android:layout_height="@dimen/message_details_actions_button_size"
-        app:layout_constraintLeft_toRightOf="@id/trashActionImageView"
+        app:layout_constraintLeft_toRightOf="@id/thirdActionImageButton"
+        app:layout_constraintRight_toLeftOf="@id/moreActionImageButton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/ripple_message_details_actions"
+        app:tint="@color/icon_inverted"
+        android:visibility="gone" />
+
+    <ImageButton
+        android:id="@+id/moreActionImageButton"
+        android:layout_width="@dimen/message_details_actions_button_size"
+        android:layout_height="@dimen/message_details_actions_button_size"
+        app:layout_constraintLeft_toRightOf="@id/fourthActionImageButton"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
