--- a/app/src/main/res/layout/layout_message_details_actions_sheet_header.xml
+++ b/app/src/main/res/layout/layout_message_details_actions_sheet_header.xml
@@ -22,6 +22,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:minHeight="?attr/actionBarSize"
     android:background="@color/background_norm"
     android:elevation="@dimen/elevation_xs"
     android:paddingStart="@dimen/padding_l"
@@ -30,7 +31,7 @@
     tools:showIn="@layout/fragment_message_details_action_sheet">
 
     <ImageView
-        android:id="@+id/detailsActionsCloseView"
+        android:id="@+id/actionsSheetCloseView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -42,34 +43,55 @@
         android:paddingBottom="@dimen/padding_l"
         android:src="@drawable/ic_close"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="RtlSymmetry"
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/detailsActionsTitleTextView"
+        android:id="@+id/actionsSheetTitleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:paddingTop="@dimen/padding_m"
         android:singleLine="true"
         android:textAppearance="@style/Text.Headline"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/actionsSheetSubTitleTextView"
+        app:layout_constraintEnd_toStartOf="@+id/actionsSheetRightActionTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="RE: Possible project underway at very long line so long that it does not fit in one line on any device" />
 
     <TextView
-        android:id="@+id/detailsActionsSubTitleTextView"
+        android:id="@+id/actionsSheetSubTitleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:paddingBottom="@dimen/padding_m"
         android:singleLine="true"
         android:textAppearance="@style/Text.Caption.Weak"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/actionsSheetRightActionTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detailsActionsTitleTextView"
-        tools:text="@tools:sample/lorem" />
+        tools:text="@tools:sample/lorem/random"
+        tools:visibility="visible" />
+
+
+    <TextView
+        android:id="@+id/actionsSheetRightActionTextView"
+        style="@style/Text.DefaultSmall.Interaction"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:paddingStart="@dimen/padding_l"
+        android:paddingTop="@dimen/padding_l"
+        android:paddingBottom="@dimen/padding_l"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry"
+        tools:text="@string/done"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
